[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/LightSource.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0

[node name="LightSource" type="Node2D"]

script = ExtResource( 1 )
small_radius = 0
big_radius = 0
small_color = null
big_color = null

[node name="BrightLight" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="BrightLight" index="0"]

shape = SubResource( 1 )

[node name="Twilight" type="Area2D" parent="." index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Twilight" index="0"]

shape = SubResource( 2 )

[connection signal="body_entered" from="BrightLight" to="." method="_on_BrightLight_body_entered"]

[connection signal="body_exited" from="BrightLight" to="." method="_on_BrightLight_body_exited"]

[connection signal="body_entered" from="Twilight" to="." method="_on_Twilight_body_entered"]

[connection signal="body_exited" from="Twilight" to="." method="_on_Twilight_body_exited"]


